--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildClient": "npm install --save gh-pages",
+    "buildClient": "npm build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
@@ -12,14 +12,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AceTrainerAndrew/fnf-week-7-code"
+    "url": "https://github.com/AceTrainerAndrew/fnf-week-7-code.git"
   },
   "keywords": [],
   "author": "Ninjamuffin99 and AceTrainerAndrew",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/acetrainerandrew/daringduels/issues"
-  },
   "homepage": "https://github.com/acetrainerandrew/realdaringduels",
 "pkg":{
 "assets":[
