--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Daring Duels V.-2",
+  "name": "TOTALLY real Daring Duels",
   "description": "totally real daring duels!!!!!!11111",
   "version": "1.0.0",
   "scripts": {
@@ -17,7 +17,7 @@
   "keywords": [],
   "author": "Ninjamuffin99 and AceTrainerAndrew",
   "license": "ISC",
-  "homepage": "https://github.com/acetrainerandrew/realdaringduels",
+  "homepage": "https://acetrainerandrew.github.io/fnf-week-7-code/",
 "pkg":{
 "assets":[
 "assets/"
