--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,7 @@
 tasks:
   - name: Lime
-    init: >
-      brew install
-    command: rails server
+    init: gp sync-await bundle
+    command: brew install Lime
 
   - name: Webpack
     init: gp sync-await bundle # wait for the above 'init' to finish
