--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - name: Terminal 1
+  - name: Dependency Haxe
     before: brew install haxe 
     init: brew install haxeflixel
     command: haxeflixel install lime
